# kube-controller

./: .gitignore  Dockerfile  setup.cfg
kube_controller/: metacontroller.py  nativecontroller.py  shell.py
manifests/: common.yaml  meta.yaml  native.yaml  sample.yaml
