[metadata]
name = kube-controller
version = 1.0.0
author = Craig Tracey
author-email = craigtracey@gmail.com
home-page = https://github.com/craigtracey/kube-controller
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[entry_points]
console_scripts =
    kube-controller = kube_controller.shell:main

[files]
packages =
    kube_controller
